...
        android:textSize="18sp" />

            <ListView
                android:layout_height="match_parent"
                android:paddingBottom="50dp"
                android:layout_width="match_parent"
                android:id="@+id/mc_list"
                />

                </LinearLayout>
            </RelativeLayout>
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
...
